# ACGM_Project

./: .gitignore
Project/ACGM_RayTracer/: main.cpp
Project/ACGM_RayTracer/src/: RayTracerGadget.cpp  RayTracerGadget.h  RayTracerResource.cpp
Project/ACGM_RayTracer_lib/: ACGM_RayTracer_lib.vcxproj  ACGM_RayTracer_lib.vcxproj.filters
Project/ACGM_RayTracer_lib/src/: Camera.cpp  CheckerShader.cpp  DirectionalLight.cpp  Image.cpp  Light.cpp  Mesh.cpp  Model.cpp  PhongShader.cpp  Plane.cpp  PointLight.cpp  Ray.cpp  Scene.cpp  SceneImporter.cpp  Shader.cpp  Sphere.cpp  SpotLight.cpp
Project/ACGM_RayTracer_lib_Test/: IntersectionTests.cpp
Project/x64/Debug/: ACGM_RayTracer.ilk  (+1 more)
hiro_libs/include/HIRO/: API.h  CMakeLists.txt  Camera.h  Debugger.h  Exportable.h  Gadget.h  HIRO.h  Input.h  Resource.h  ResourceId.h  Version.h
hiro_libs/include/HIRO/gui/: GuiGenerator.h  GuiHelpers.h  GuiPanel.h  GuiTypes.h
hiro_libs/include/HIRO/modules/: CMakeLists.txt  GeometryGadget.h  GeometryResource.h  GraphResource.h  GuiResource.h  MeshResource.h  PointCloudResource.h  SkeletonResource.h  TextureResource.h
hiro_libs/include/HIRO_DRAW/: API.h  CMakeLists.txt  ElementRenderer.h  PrimitiveDatabase.h  RenderSystem.h  Renderer.h  Scene.h  ShaderApi.h  TextRenderer.h  TextureProcessing.h  VisualCamera.h  VisualCameraController.h
hiro_libs/include/HIRO_DRAW/renderers/: BillboardRenderer.h  CMakeLists.txt  GeometryRenderer.h  GraphRenderer.h  LineFieldRenderer.h  MeshRenderer.h  PointCloudRenderer.h  RasterRenderer.h  SkeletonRenderer.h  SkinnedMeshRenderer.h
(+207 files in other folders)
